--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,3 +30,8 @@ body {
   background: rgb(131,58,180);
   background: linear-gradient(90deg,   rgb(255, 62, 19) 50%, rgba(252,176,69,1) 100%);
 }
+
+.image{
+  background: rgb(234,234,234);
+  background: radial-gradient(circle, rgba(234,234,234,0) 30%, rgba(234,234,234,1) 100%);
+}
