--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,3 +35,22 @@ body {
   background: rgb(234,234,234);
   background: radial-gradient(circle, rgba(234,234,234,0) 30%, rgba(234,234,234,1) 100%);
 }
+.jj{
+  box-shadow: .1px -0.6px 0.7px #eeeeee ,
+    -0.5px -3.7px 4.2px -0.4px #eeeeee ,
+    -3.7px -28.2px 32px -1.8px #eeeeee ,
+    -8.2px -63.2px 71.7px -2.5px #eeeeee ;
+}
+
+:root {
+  --shadow-color: 286deg 36% 56%;
+  --shadow-elevation-low:
+    -0.1px -0.6px 0.7px hsl(var(--shadow-color) / 0.34),
+    -0.1px -1px 1.1px -1.2px hsl(var(--shadow-color) / 0.34),
+    -0.3px -2.5px 2.8px -2.5px hsl(var(--shadow-color) / 0.34);
+  --shadow-elevation-medium:
+    -0.1px -0.6px 0.7px hsl(black / 0.36),
+    -0.3px -2.1px 2.4px -0.8px hsl(black / 0.36),
+    -0.7px -5.2px 5.9px -1.7px hsl(black / 0.36),
+    -1.6px -12.6px 14.3px -2.5px hsl(black / 0.36);
+}
