--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,68 +1,11 @@
-#app { height: 100% }
-html,
-body {
-  position: relative;
-  height: 100%;
+.dashboard-card{
+  box-shadow: 0 7px 16px -10px rgba(0, 0, 0, 0.2);
 }
 
-
-.navbar{
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(234, 234, 234, 0.75);
+.shadow-bottom{
+  box-shadow: 2px 25px 20px -15px rgba(0, 0, 0, 0.1);
 }
 
-.index-bg{
-  background-color: rgba(234, 234, 234, 0.75);
-}
-
-.index-bg4{
-  background: rgb(234,234,234);
-  background: linear-gradient(137deg, rgba(234,234,234,0.75) 0%, rgba(234,234,234,0.75) 50%, rgba(255,60,60,0.6853335084033614) 86%, rgba(255,60,60,0.7245491946778712) 100%);
-}
-
-.index-bg5{
-  background: rgb(234,234,234);
-  background: linear-gradient(180deg, rgba(234,234,234,0.75) 0%, rgba(234,234,234,0.75) 25%, rgba(255,60,60,0.6853335084033614) 78%, rgba(255,60,60,0.7245491946778712) 100%);
-}
-
-.index-bg2{
-  background: rgb(131,58,180);
-  background: linear-gradient(90deg,   rgb(255, 62, 19) 50%, rgba(252,176,69,1) 100%);
-}
-
-.image{
-  background: rgb(234,234,234);
-  background: radial-gradient(circle, rgba(234,234,234,0) 30%, rgba(234,234,234,1) 100%);
-}
-.jj{
-  box-shadow: .1px -0.6px 0.7px #eeeeee ,
-  -0.5px -3.7px 4.2px -0.4px #eeeeee ,
-  -3.7px -28.2px 32px -1.8px #eeeeee ,
-  -8.2px -63.2px 71.7px -2.5px #eeeeee ;
-}
-
-:root {
-  --shadow-color: 286deg 36% 56%;
-  --shadow-elevation-low:
-    -0.1px -0.6px 0.7px hsl(var(--shadow-color) / 0.34),
-    -0.1px -1px 1.1px -1.2px hsl(var(--shadow-color) / 0.34),
-    -0.3px -2.5px 2.8px -2.5px hsl(var(--shadow-color) / 0.34);
-  --shadow-elevation-medium:
-    -0.1px -0.6px 0.7px hsl(black / 0.36),
-    -0.3px -2.1px 2.4px -0.8px hsl(black / 0.36),
-    -0.7px -5.2px 5.9px -1.7px hsl(black / 0.36),
-    -1.6px -12.6px 14.3px -2.5px hsl(black / 0.36);
-}
-
-.product-div{
-  @media only screen and (max-width: 640px) {
-    box-shadow: -2px 3px 47px -3px rgba(0,0,0,0.25);
-    -webkit-box-shadow: -2px 3px 47px -3px rgba(0,0,0,0.25);
-    -moz-box-shadow: -2px 3px 47px -3px rgba(0,0,0,0.25);
-  }
-}
-
-.product-sm-img{
-  box-sizing:border-box
+.shadow-top{
+  box-shadow: 2px -25px 20px -25px rgba(0, 0, 0, 0.1);
 }
